--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bootstrap/dist/css/bootstrap.css";
+
+body {
+  background-color: black;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.navbar{
+  div {
+    color: white!important;
+  }
+}
+.bg-light {
+  background-color: #8e210b!important;
+}
+
+.contenitore {
+  padding: 16px;
+  color: gray;
+  p {
+    color: white;
+  }
+}
