--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,5 @@
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur repudiandae distinctio atque consequatur sapiente voluptatibus, dicta dolores velit blanditiis nemo ab natus et sed error facilis illo voluptatem, inventore dolorem.
   </p>
 </div>
-
+<app-recipes></app-recipes>
 <router-outlet />
