--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Cibando2023</a>
+    <a class="navbar-brand"><img src="../../../assets/images/LogoCibando2023.jpg" style="width: 50px;" > Cibando</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"><i class="pi pi-home"></i> Home</a>
+          <a class="nav-link" aria-current="page" routerLink="home"><i class="pi pi-home"></i> Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="pi pi-file"></i> Ricette</a>
+          <a class="nav-link" routerLink="ricette"><i class="pi pi-file"></i> Ricette</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="pi pi-envelope"></i> Contatti</a>
+          <a class="nav-link"><i class="pi pi-envelope"></i> Contatti</a>
         </li>
       </ul>
     </div>
