--- a/src/styles/siteColors.scss
+++ b/src/styles/siteColors.scss
@@ -1,6 +1,6 @@
 // primary colors
-$primary-color-1: #8e210b;
-$primary-color-2: #551103;
+$primary-color-1: #03df28;
+$primary-color-2: #023c12;
 
 // secondary colors
 $secondary-color-1: black;
