--- a/src/app/shared/recipe-card/recipe-card.component.html
+++ b/src/app/shared/recipe-card/recipe-card.component.html
@@ -14,6 +14,7 @@
   }
 </div>
 -->
+
 <div>
   <div class="container-card" *ngFor="let item of recipe">
     <div class="card">
@@ -22,7 +23,7 @@
         <h5 class="card-title">{{item.title}}</h5>
         <p class="card-text">{{item.description}}</p>
         <div class="link">
-          <a href="#" class="btn">Visualizza</a>
+          <a routerLink="detail/{{item.title}}/{{item._id}}" class="btn">Visualizza</a>
       </div>
       </div>
     </div>
