--- a/src/app/components/recipes/recipes-list/recipes-list.component.scss
+++ b/src/app/components/recipes/recipes-list/recipes-list.component.scss
@@ -3,3 +3,8 @@ h2{
   font-family: 'Homemade Apple';
   margin-top: 25px;
 }
+
+.titolo-selezionato{
+  //font-family: "Homemade Apple";
+  font-weight: bold;
+}
