--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link"><i class="pi pi-envelope"></i> Contatti</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="registration"><i class="pi pi-user"></i> Registrati</a>
+        </li>
       </ul>
     </div>
   </div>
