--- a/src/app/shared/recipe-card/recipe-card.component.html
+++ b/src/app/shared/recipe-card/recipe-card.component.html
@@ -22,7 +22,7 @@
       <div class="card-img-top" [ngStyle]="{'background-image': 'url('+item.image+')'}" (click)="sendDetails(item._id)"></div>
       <div class="card-body">
         <h5 class="card-title">{{item.title}}</h5>
-        <p class="card-text">{{item.description | slice: 0:100}} ...</p>
+        <p class="card-text">{{item.description | slice: 0:sliceDescription(item.description)}} ...</p>
         <div class="link">
           <a routerLink="detail/{{item.title}}/{{item._id}}" class="btn">Visualizza</a>
       </div>
