--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,3 +13,12 @@
   </div>
 
 </div>
+
+
+<div id="datiUtete">
+  <h2>Grazie per esserti registrato:</h2>
+  <ul>
+    <li>nome: {{nomeUtente}}</li>
+    <li>email: {{emailUtente}}</li>
+  </ul>
+</div>
