--- a/src/app/components/user/registration/registration.component.html
+++ b/src/app/components/user/registration/registration.component.html
@@ -184,7 +184,7 @@
               <div class="controls">
                 <div class="input-group mb-3">
                   <span class="input-group-text" id="basic-addon3"><i class="pi pi-key"></i></span>
-                  <input type="text" class="form-control" placeholder="Password" formControlName="password">
+                  <p-password  [toggleMask]="true" class="form-control" formControlName="password" strongRegex="^(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[^\w\d\s:])([^\s]){8,16}$" />
                 </div>
                 <p class="help" *ngIf="form.controls.password.hasError('required') && form.get('password').touched">Questo campo è obbligatorio</p>
                 <p class="help" *ngIf="form.controls.password.hasError('pattern')">La password non corrisponde ai criteri ammessi!</p>
