--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,11 @@ h3 {
 .carousel-caption {
   color: black!important;
 }
+
+.p-password{
+  display: block!important;
+}
+.p-inputtext, .p-password-input{
+  width: 100%!important;
+  border: none!important;
+}
