--- a/src/app/components/user/registration/registration.component.html
+++ b/src/app/components/user/registration/registration.component.html
@@ -154,7 +154,7 @@
   <div class="card mb-12" style="height: 700px; border-radius: 7px;">
     <div class="row g-0">
       <div class="col-md-5">
-        <div class="card-body" [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="card-body">
           <h5 class="card-title">REGISTRATI</h5>
           <h3 class="subtitle">Registrandoti sarai avvisato alla pubblicazione di nuove ricette!</h3>
           <form class="" [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -215,7 +215,7 @@
             <div class="row">
               <div class="controls">
                 <div style="text-align: center;">
-                  <button  type="submit" class="btn btn-lg" >Registrati</button> <!-- [disabled]="!form.valid" -->
+                  <button  type="submit" class="btn btn-lg" [disabled]="!form.valid">Registrati</button> <!--  -->
                 </div>
               </div>
             </div>
