--- a/src/app/shared/recipe-card/recipe-card.component.html
+++ b/src/app/shared/recipe-card/recipe-card.component.html
@@ -1,22 +1,9 @@
-<!--
-<div class="row">
-  @for(item of recipe; track $index){
-    <div class="col-md-4">
-      <div class="card">
-        <img class="card-img-top" [src]="item.image" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">{{item.title}}</h5>
-          <p class="card-text">{{item.description}}</p>
-          <a href="#" class="btn btn-primary">Visualizza</a>
-        </div>
-      </div>
-    </div>
-  }
+<div class="container-paginator">
+  <!-- <p-paginator (onPageChange)="onPageChange($event)" [first]="first" [rows]="rows" [totalRecords]="120" [rowsPerPageOptions]="[10, 20, 30]" /> -->
 </div>
--->
 
 <div>
-  <div class="container-card" *ngFor="let item of recipe">
+  <div class="container-card" *ngFor="let item of recipeList | slice: (page * ricepesForPage) - ricepesForPage : page * ricepesForPage">
     <div class="card">
       <!--<div class="card-img-top" [ngStyle]="{'background-image': 'url('+item.image+')'}" (click)="inviaTitolo(item.title)"></div>-->
       <div class="card-img-top" [ngStyle]="{'background-image': 'url('+item.image+')'}" (click)="sendDetails(item._id)"></div>
