Lezione 12 - Add Server

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
   <div class="container-fluid">
     <h2>Ultime Ricette:</h2>
 
-    <app-recipe-card pag="home"></app-recipe-card>
+    <app-recipe-card pageCaller="home"></app-recipe-card>
   </div>
 
 </div>
