Lezione 12 - Add API Call

--- a/src/app/components/recipes/detail/detail.component.html
+++ b/src/app/components/recipes/detail/detail.component.html
@@ -1,13 +1,13 @@
 <div *ngIf="recipeDetail">
   <div class="recipeDetail">
-    <img src="{{recipeDetail.image}}">
+    <img src="{{recipeDetail.imageUrl}}">
     <div class="container-fluid">
       <h2>{{recipeDetail.title}}</h2>
       <p>
         {{recipeDetail.description}}
       </p>
       <p><b>Difficoltà</b>: <span><img [src]="difficultyPathImage+recipeDetail.difficulty+'.png'" class="difficulty" /></span></p>
-      <p><b>Data</b>: {{recipeDetail.creationDate}}</p>
+      <p><b>Data</b>: {{recipeDetail.createdAt}}</p>
     </div>
   </div>
 </div>
