--- a/src/app/shared/recipe-card/recipe-card.component.html
+++ b/src/app/shared/recipe-card/recipe-card.component.html
@@ -6,12 +6,12 @@
   <div class="container-card" *ngFor="let item of recipeList | slice: (page * ricepesForPage) - ricepesForPage : page * ricepesForPage">
     <div class="card">
       <!--<div class="card-img-top" [ngStyle]="{'background-image': 'url('+item.image+')'}" (click)="inviaTitolo(item.title)"></div>-->
-      <div class="card-img-top" [ngStyle]="{'background-image': 'url('+item.image+')'}" (click)="sendDetails(item._id)"></div>
+      <div class="card-img-top" [ngStyle]="{'background-image': 'url('+item.imageUrl+')'}" (click)="sendDetails(item.id)"></div>
       <div class="card-body">
         <h5 class="card-title">{{item.title}}</h5>
         <p class="card-text">{{item.description | slice: 0:sliceDescription(item.description)}} ...</p>
         <div class="link">
-          <a routerLink="detail/{{item.title}}/{{item._id}}" class="btn">Visualizza</a>
+          <a routerLink="detail/{{item.title}}/{{item.id}}" class="btn">Visualizza</a>
       </div>
       </div>
     </div>
