Lezione 13 - Add User

--- a/src/app/components/user/registration/registration.component.html
+++ b/src/app/components/user/registration/registration.component.html
@@ -205,7 +205,7 @@
             <div class="row">
               <div class="controls">
                 <div class="" style="text-align: center;">
-                    <span class="link"><input class="" type="checkbox" formControlName="accept">
+                    <span class="link"><input class="" type="checkbox" formControlName="accepted">
                     Dichiaro di accettare i Termini del Servizio</span>
                 </div>
                 <p class="help-accept" *ngIf="!form.get('accept').valid && form.get('accept').touched">La dichiarazione è obbligatoria!</p>
