--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,25 +5,38 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="home"><i class="pi pi-home"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="recipe"><i class="pi pi-file"></i> Ricette</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link"><i class="pi pi-envelope"></i> Contatti</a>
-        </li>
-        <li class="nav-item" *ngIf="!authService.isLogged()">
-          <a class="nav-link" routerLink="login"><i class="pi pi-sign-in"></i> Accedi</a>
-        </li>
-        <li class="nav-item" *ngIf="authService.isLogged()"><span>Ciao {{user.name}} - <a class="nav-link" (click)="logout()"><i class="pi pi-sign-out"></i> Esci</a></span>
-        </li>
-        <li class="nav-item" *ngIf="!authService.isLogged()">
-          <a class="nav-link" routerLink="registration"><i class="pi pi-user"></i> Registrati</a>
-        </li>
-      </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="home"><i class="pi pi-home"></i> Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="recipe"><i class="pi pi-file"></i> Ricette</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"><i class="pi pi-envelope"></i> Contatti</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav" *ngIf="!authService.isLogged()">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="login"><i class="pi pi-sign-in"></i> Accedi</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav" *ngIf="authService.isLogged()">
+          <li class="nav-item">
+            <span class="nav-link">Ciao {{user.name}}</span>
+          </li>
+          <li>
+            <a class="nav-link" routerLink="profile"><i class="pi pi-user"></i> Profilo</a>
+          </li>
+          <li>
+            <a class="nav-link" (click)="logout()"><i class="pi pi-sign-out"></i> Esci</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item" *ngIf="!authService.isLogged()">
+            <a class="nav-link" routerLink="registration"><i class="pi pi-user"></i> Registrati</a>
+          </li>
+        </ul>
     </div>
   </div>
 </nav>
