--- a/src/app/shared/recipe-card/recipe-card.component.html
+++ b/src/app/shared/recipe-card/recipe-card.component.html
@@ -2,7 +2,7 @@
   <p-paginator (onPageChange)="onPageChange($event)" [rows]="ricepesForPage" [totalRecords]="recipeList.length"  />
 </div>
 <!-- {{recipeList.length}} -->
-<div *ngIf="recipeList">
+<div *ngIf="recipeList.length" >
   <div class="container-card" *ngFor="let item of recipeList | slice: (page * ricepesForPage) - ricepesForPage : page * ricepesForPage">
     <div class="card">
       <!--<div class="card-img-top" [ngStyle]="{'background-image': 'url('+item.image+')'}" (click)="inviaTitolo(item.title)"></div>-->
