--- a/src/app/components/recipes/new-recipe/new-recipe.component.html
+++ b/src/app/components/recipes/new-recipe/new-recipe.component.html
@@ -8,6 +8,7 @@
     <div class="mb-3">
       <label for="description" class="form-label">Descrizione</label>
       <textarea class="form-control" id="description" formControlName="description" rows="3"></textarea>
+      <!-- <ckeditor [editor]="editor" data="" formControlName="description" [config]="editorConfig"></ckeditor> -->
     </div>
     <div class="mb-3">
       <label for="imageUrl" class="form-label">Link immagine</label>
